2008-02-22 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Increased version number to 1.5, require Tcl/Tk 8.4
        * plotconfig.tcl: Added this file for configuring the plots
        * plotchart.tcl: Support for configuration command, also incorporated patch by Michael Baudin
        * plotaxis.tcl: Support for configuration command
        * plotpriv.tcl: Support for configuration command
        * scaling.tcl: Corrected optional argument to determineScale
        * plotdemos7.tcl: Added examples of configuring the plots

2008-01-25 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Corrected version number

2007-09-07 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Added description of how to handle resizing
        * plotchart.tcl: Changed from [$w cget -width] to [winfo width $w]
        * plotpriv.tcl: Ditto

2007-06-19 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Corrected syntax error

2007-06-16 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented the createTXPlot method (for time-x plots)
        * plotpriv.tcl: Added the DrawTimeData method and proper support for legends
                        in barcharts
        * plotaxis.tcl: Added drawing rectangles in legends
        * plotdemos1.tcl: Extended the barchart with a legend and added
                          data to the TX-plot

2007-06-12 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented a tip by Bernhard Wallner (number of
                         series can be floating-point)
        * plotaxis.tcl: Corrected a few typos in drawing the legend
        * plotdemos1.tcl: Apply Bernhard's tip to see the effect

2007-06-02 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of background options, 3D ribbon charts
        * plotchart.tcl: 3D ribbon plot added