@@ -3,9 +3,10 @@
         * plotconfig.tcl: Added this file for configuring the plots
         * plotchart.tcl: Support for configuration command, also incorporated patch by Michael Baudin
         * plotaxis.tcl: Support for configuration command
-        * plotpriv.tcl: Support for configuration command
+        * plotpriv.tcl: Support for configuration command and graded bars in a barchart
         * scaling.tcl: Corrected optional argument to determineScale
         * plotdemos7.tcl: Added examples of configuring the plots
+        * plotannot.tcl: Graded bars in a barchart
 
 2008-01-25 Arjen Markus  <arjenmarkus@users.sourceforge.net>
         * pkgIndex.tcl: Corrected version number
